// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubCustomSection generateCustomSubSection Insert custom sub section into existing section with subsection 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingFacet1": Object {
        "visible": true,
      },
      "ExistingFacet2": Object {
        "subSections": Object {
          "ExistingCustomSubSection": Object {
            "position": Object {
              "anchor": "IncidentOverviewFacet",
              "placement": "Before",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
            "title": "Custom Title",
          },
          "NewCustomSubSection": Object {
            "position": Object {
              "anchor": "DummyFacet",
              "placement": "After",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
            "title": "New Custom Sub Section",
          },
        },
        "visible": true,
      },
    },
  },
}
`;

exports[`SubCustomSection generateCustomSubSection Insert custom sub section into existing section without existing subsections 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingFacet1": Object {
        "subSections": Object {
          "NewCustomSubSection": Object {
            "position": Object {
              "anchor": "DummyFacet",
              "placement": "After",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
            "title": "New Custom Sub Section",
          },
        },
        "visible": true,
      },
      "ExistingFacet2": Object {
        "subSections": Object {
          "ExistingCustomSubSection": Object {
            "position": Object {
              "anchor": "IncidentOverviewFacet",
              "placement": "Before",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
            "title": "Custom Title",
          },
        },
        "visible": true,
      },
    },
  },
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create with anchor - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "title": "New Custom Sub Section",
  "type": "XMLFragment",
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create with anchor - latest ui5 1`] = `
Object {
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "title": "New Custom Sub Section",
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create without anchor - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "position": Object {
    "placement": "Before",
  },
  "title": "New Custom Sub Section",
  "type": "XMLFragment",
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create without anchor - latest ui5 1`] = `
Object {
  "position": Object {
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "title": "New Custom Sub Section",
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create without position - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "title": "New Custom Sub Section",
  "type": "XMLFragment",
}
`;

exports[`SubCustomSection generateCustomSubSection Test 'position' property. Create without position - latest ui5 1`] = `
Object {
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
  "title": "New Custom Sub Section",
}
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.85 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "DummyParentFacet": Object {
        "subSections": Object {
          "NewCustomSubSection": Object {
            "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
            "position": Object {
              "anchor": "DummyFacet",
              "placement": "After",
            },
            "title": "New Custom Sub Section",
            "type": "XMLFragment",
          },
        },
      },
    },
  },
}
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.85 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSubSection'}\\">
		<Button text=\\"NewCustomSubSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.85 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.86 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "DummyParentFacet": Object {
        "subSections": Object {
          "NewCustomSubSection": Object {
            "position": Object {
              "anchor": "DummyFacet",
              "placement": "After",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
            "title": "New Custom Sub Section",
          },
        },
      },
    },
  },
}
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.86 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSubSection'}\\">
		<Button text=\\"NewCustomSubSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.86 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.98 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "DummyParentFacet": Object {
        "subSections": Object {
          "NewCustomSubSection": Object {
            "position": Object {
              "anchor": "DummyFacet",
              "placement": "After",
            },
            "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSubSection",
            "title": "New Custom Sub Section",
          },
        },
      },
    },
  },
}
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.98 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<VBox core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSubSection'}\\">
		<Button text=\\"NewCustomSubSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`SubCustomSection generateCustomSubSection Versions 1.98 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;
